--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="utf-8">
 	
-	<title>Friday Night Funkin' | 3kh0</title>
+	<title>Friday Night Funkin' | totally real daring duels</title>
 	
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
